Fixed layout issue, update snapshots and build [#150837190]

--- a/src/FileUploader/components/_FileUploader.scss
+++ b/src/FileUploader/components/_FileUploader.scss
@@ -113,6 +113,12 @@
   .file-info {
     .file-name {
       line-height: 48px;
+      display: flex;
+      .truncated {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
   }
 
